spring security oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8081
-server.address=localhost
+server.address=192.168.7.154
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mldn
 spring.datasource.username=c##rdy
 spring.datasource.password=123456
+
+spring.redis.url=redis://localhost:6379
 
 mybatis.mapper-locations=classpath*:com/belle/springsecurityoauth2/dao/mapper/*.xml
 mybatis.type-aliases-package=com.belle.springsecurityoauth2.model.entity
