--- a/src/main/resources/config/redis.properties
+++ b/src/main/resources/config/redis.properties
@@ -1,5 +1,5 @@
 #Matser\u7684ip\u5730\u5740  
-redis.hostName=127.0.0.1
+redis.hostName=localhost
 #\u7AEF\u53E3\u53F7  
 redis.port=6379
 #\u5982\u679C\u6709\u5BC6\u7801  
